# web_programming_laboratories_1

./: Makefile  README.md  pyproject.toml
web_programming_laboratories_1/: task0.py  task1.py  task2.py  task3.py  task4.py
